k3s/deployment.yaml
#
# kubectl apply -k .
#
# [1] https://hub.docker.com/r/rundeck/rundeck/
# [2] https://github.com/rundeck/docker-zoo
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rundeck-server
spec:
  replicas: 1
  selector:
    matchLabels:
      component: rundeck-server
  template:
    metadata:
      labels:
        component: rundeck-server
    spec:
      # Volumes used by some or all containers of the Pod:
      volumes:
      - name: "rundeck-data"
        persistentVolumeClaim:
          claimName: "rundeck-data"
      containers:
      - name: rundeck-server
        # docker pull rundeck/rundeck
        # docker run --name some-rundeck -v data:/home/rundeck/server/data rundeck/rundeck
        image: rundeck/rundeck:3.3.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4440
        # The simplest way to persist data between container
        # starts/upgrades is to utilize named volumes [2]:
        volumeMounts:
        - mountPath: "/home/rundeck/server/data"
          name: "rundeck-data"
        # FIXME: the first  thing Rundeck does is to  redirect the new
        # user elsewhere.  Try hardcoding  the Ingress URL  as defined
        # below:
---
apiVersion: v1
kind: Service
metadata:
  name: rundeck-server
spec:
  type: ClusterIP
  selector:
    component: rundeck-server
  ports:
  - port: 80
    targetPort: 4440
---
#
# We  assume here  that  *.localhost resolves  to  the local  machine.
# Following URL should be directed to corresponding Service, also with
# https:// protocoll:
#
#     http://rundeck.localhost
#
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rundeck
spec:
  rules:
  - host: rundeck.localhost
    http:
      paths:
      - backend:
          serviceName: rundeck-server
          servicePort: 80
